# gendoc

./: Cargo.toml  README.md  gendoc.yaml
.github/workflows/: rust.yml
src/: document_option.rs  generator.rs  lib.rs  main.rs  option.rs  parser.rs
