[package]
name = "gendoc"
version = "0.1.0"
authors = ["furuhama <yuuuuusuke0210@gmail.com>"]
edition = "2018"
description = "Simple document generator from yaml template"
license = "MIT"
exclude = [
    "gendoc.yaml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.15"
regex = "1.3.9"
serde = "1.0"
serde_yaml = "0.8"
